ps4-section products alignment-sm devices bugifx

--- a/css/syle.css
+++ b/css/syle.css
@@ -35,6 +35,7 @@ img {
 .btn:hover {
     box-shadow: inset 0 0 0 2px #cfcfcf;
 }
+
 #odd_ban .btn:hover, #marv_ban .btn:hover {
     box-shadow: inset 0 0 0 2px #3F65DE;
 }
@@ -182,6 +183,13 @@ nav .ps_flex{
 nav .navbar-collapse>img {
     width: 30px;
     margin: 5px;
+}
+@media screen and (max-width: 767px) {
+    .navbar .btn {
+        padding: 5px 50px;
+        margin: 0 5px;
+    }
+    
 }
 
     /* header jumbo */
